# shop_creator

./: .gitignore  README.md  package-lock.json
express-service/: db.ts  main.ts  package-lock.json  package.json  payments.ts  queue-streaming.ts  tsconfig.json  vitest.config.js
express-service/tests/: main.test.ts
rust-rapidly/: Cargo.toml
rust-rapidly/src/: main.rs
site/: README.md  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.ts
site/src/: app.html  app.postcss
site/src/lib/: api.ts  inter_stores.ts
site/src/lib/layouts/: remarkableBlackWhiteSearch.svelte  remarkableBlackWhiteWishList.svelte  remarkableWhiteBlackLayoutUpbar.svelte  remarkableWhiteBlack_layout.svelte
site/src/lib/layouts/RemarkableBlackWhite/: Checkout.svelte
site/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.svelte
site/src/routes/account/create/: +page.svelte
site/src/routes/account/created/: +page.svelte
site/src/routes/account/login/: +page.svelte
site/src/routes/layouts_preview/: +layout.svelte
site/src/routes/layouts_preview/remarkable-whiteblack/: +page.svelte
site/src/routes/order/basket/: +page.svelte
site/src/routes/order/checkout/[shop_id]/: +page.svelte
site/src/routes/preparation/: +page.svelte  would_have.md
site/src/routes/preparation/final/: +error.svelte  +page.server.ts  +page.svelte
site/src/routes/shops/[shop_id]/: +page.svelte  +page.ts
site/src/routes/shops/[shop_id]/[item_id]/: +page.svelte  (+2 more)
site/src/routes/your-shop-panel/[shop_id]/: +page.server.ts  +page.svelte  AddNewItemMenu.svelte
