[package]
name = "rust-rapidly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "1.13.0"
lapin = "2.3.1"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = { version = "1.0.107"}
tokio = { version = "1.32.0", features = ["full"] }
